src/objects/Credit_Related_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>CbrType__c</fullName>
        <label>CbrType</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_by_Network_ID__c</fullName>
        <label>Created by Network ID</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FICO__c</fullName>
        <label>FICO</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GreatestNumberOfMonthsATradeHasNotBeenRe__c</fullName>
        <label>GreatestNumberOfMonthsATradeHasNotBeenRe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfBankruptcies__c</fullName>
        <label>NumberOfBankruptcies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfInquiries__c</fullName>
        <label>NumberOfInquiries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfPublicRecords__c</fullName>
        <label>NumberOfPublicRecords</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfSatisfiedTrades__c</fullName>
        <label>NumberOfSatisfiedTrades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldestOpenDateOfATrade__c</fullName>
        <label>OldestOpenDateOfATrade</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_ID__c</fullName>
        <label>Opp ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Credit Related Reporting</relationshipLabel>
        <relationshipName>Credit_Related_Reporting</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TotalOfAllBalances__c</fullName>
        <label>TotalOfAllBalances</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfAllLimits__c</fullName>
        <label>TotalOfAllLimits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfAllPayments__c</fullName>
        <label>TotalOfAllPayments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfAllTrades30DaysPastDue__c</fullName>
        <label>TotalOfAllTrades30DaysPastDue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfAllTrades60DaysPastDue__c</fullName>
        <label>TotalOfAllTrades60DaysPastDue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfAllTrades90DaysPastDue__c</fullName>
        <label>TotalOfAllTrades90DaysPastDue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfAllTrades__c</fullName>
        <label>TotalOfAllTrades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfInstallmentBalances__c</fullName>
        <label>TotalOfInstallmentBalances</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfInstallmentLimits__c</fullName>
        <label>TotalOfInstallmentLimits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfInstallmentPayments__c</fullName>
        <label>TotalOfInstallmentPayments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfInstallmentTrades30DaysPastDue__c</fullName>
        <label>TotalOfInstallmentTrades30DaysPastDue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfInstallmentTrades60DaysPastDue__c</fullName>
        <label>TotalOfInstallmentTrades60DaysPastDue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfInstallmentTrades90DaysPastDue__c</fullName>
        <label>TotalOfInstallmentTrades90DaysPastDue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfInstallmentTrades__c</fullName>
        <label>TotalOfInstallmentTrades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfMortgageBalances__c</fullName>
        <label>TotalOfMortgageBalances</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfMortgageLimits__c</fullName>
        <label>TotalOfMortgageLimits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfMortgagePayments__c</fullName>
        <label>TotalOfMortgagePayments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfMortgageTrades30DaysPastDue__c</fullName>
        <label>TotalOfMortgageTrades30DaysPastDue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfMortgageTrades60DaysPastDue__c</fullName>
        <label>TotalOfMortgageTrades60DaysPastDue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfMortgageTrades90DaysPastDue__c</fullName>
        <label>TotalOfMortgageTrades90DaysPastDue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfMortgageTrades__c</fullName>
        <label>TotalOfMortgageTrades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfOpenBalances__c</fullName>
        <label>TotalOfOpenBalances</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfOpenLimits__c</fullName>
        <label>TotalOfOpenLimits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfOpenPayments__c</fullName>
        <label>TotalOfOpenPayments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfOpenTrades30DaysPastDue__c</fullName>
        <label>TotalOfOpenTrades30DaysPastDue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfOpenTrades60DaysPastDue__c</fullName>
        <label>TotalOfOpenTrades60DaysPastDue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfOpenTrades90DaysPastDue__c</fullName>
        <label>TotalOfOpenTrades90DaysPastDue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfOpenTrades__c</fullName>
        <label>TotalOfOpenTrades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfRevolvingBalances__c</fullName>
        <label>TotalOfRevolvingBalances</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfRevolvingLimits__c</fullName>
        <label>TotalOfRevolvingLimits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfRevolvingPayments__c</fullName>
        <label>TotalOfRevolvingPayments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfRevolvingTrades30DaysPastDue__c</fullName>
        <label>TotalOfRevolvingTrades30DaysPastDue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfRevolvingTrades60DaysPastDue__c</fullName>
        <label>TotalOfRevolvingTrades60DaysPastDue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfRevolvingTrades90DaysPastDue__c</fullName>
        <label>TotalOfRevolvingTrades90DaysPastDue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOfRevolvingTrades__c</fullName>
        <label>TotalOfRevolvingTrades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalPastDueAmount__c</fullName>
        <label>TotalPastDueAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorstTradeRating__c</fullName>
        <label>WorstTradeRating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Credit Related Reporting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CRR# {000000000}</displayFormat>
        <label>Credit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Related Reporting</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>